--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.totvs.noneco</groupId>
     <artifactId>resteasy-core-keycloak</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-Final</version>
     <name>RestEasy Com Keycloak core Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <repositories>
@@ -22,13 +22,13 @@
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-core</artifactId>
             <scope>provided</scope>
-            <version>2.1.0.Final</version>
+            <version>1.6.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.keycloak</groupId>
             <artifactId>keycloak-adapter-core</artifactId>
             <scope>provided</scope>
-            <version>2.1.0.Final</version>
+            <version>1.6.0.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -66,9 +66,14 @@
             <scope>provided</scope>
             <version>4.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>CobrancaServices</finalName>
+        <finalName>cobranca-service</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
