--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         id="WebApp_ID" version="3.0">
 
-<module-name>cobranca-service</module-name>
+    <module-name>cobranca-service</module-name>
 
     <security-constraint>
         <web-resource-collection>
             <url-pattern>/*</url-pattern>
         </web-resource-collection>
-        <!--        <user-data-constraint>
+        <!--
+        redireciona para uma pagina https com certificado auto assinado
+        <user-data-constraint>
                     <transport-guarantee>CONFIDENTIAL</transport-guarantee>
                 </user-data-constraint>  -->
         <auth-constraint>
@@ -21,6 +25,8 @@
 
     <security-role>
         <role-name>user</role-name>
+        <role-name>admin</role-name>
     </security-role>
+
 
 </web-app>
